--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,11 @@
-.App {
-  text-align: center;
+.add-item, .total-price {
+    margin: 20px 0;
 }
 
-.App-logo {
-  height: 40vmin;
+.add-item-input {
+    width: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+.add-item-button {
+    display: block;
+    margin: 20px 0;
 }
